--- a/_config.yml
+++ b/_config.yml
@@ -54,16 +54,16 @@ toc:
   list_number:            true  # 是否显示数字排序
 
 # 文章页留言内容，hexo中所有变量及辅助函数等均可调用，具体请查阅 hexo.io
-postMessage:              The tears will dry, the smiles will fade, while the memories last forever.
+postMessage:              文章页留言内容
 
 # 站长统计，如要开启，输入CNZZ站点id，如 cnzz: 1255152447
-cnzz:                     
+cnzz:
 
 # 百度统计，如要开启，改为你的 key
-baidu_tongji:             
+baidu_tongji:
 
 # 腾讯分析，如要开启，输入站点id
-tajs:                     
+tajs:
 
 # google
 google_analytics:         false
