--- a/_config.yml
+++ b/_config.yml
@@ -75,6 +75,7 @@ less:
   paths:
     - source/css/style.less
 
+# 以下评论插件开启一个即可
 # 是否使用 gitment，https://github.com/imsun/gitment
 gitment:                  false
 # gitment:
@@ -82,6 +83,20 @@ gitment:                  false
 #   repo:
 #   client_id:
 #   client_secret:
+
+# Valine Comment system. https://valine.js.org
+valine:
+  enable: true # 如果你想使用valine，请将值设置为 true
+  appId: EdyGwWrx3Uxu5hRnY4d4pswD-gzGzoHsz # your leancloud appId
+  appKey: 4pmmj56YRbawceTeHCkLMT7n # your leancloud appKey
+  notify: false # Mail notify
+  verify: false # Verify code
+  avatar: mm # Gravatar style : mm/identicon/monsterid/wavatar/retro/hide
+  placeholder: 您打算说点什么？ # Comment Box placeholder
+  guest_info: nick,mail,link # Comment header info
+  pageSize: 10 # comment list page size
+
+
 
 # 规范网址
 # 让搜索引擎重定向你的不同域名、不同子域、同域不同目录的站点到你期望的路径
