--- a/demo/_config.yml
+++ b/demo/_config.yml
@@ -1,23 +1,24 @@
-# Hexo Configurationzh-CN
+# Hexo Configuration zh-CN
 ## Docs:            https://hexo.io/docs/configuration.html
 ## Source:          https://github.com/hexojs/hexo/
 
 # Site
-title:              Demo's Blog
-subtitle:           demo
-description:        Welcome!
-author:             Demo
+title:              Dinphy - 简乐
+subtitle:           生活不易,快乐就好
+description:        生活不易,快乐就好
+keywords:           小王,dinphy,定飞,国庆
+author:             Dinphy - 简乐
 language:           zh-CN
 timezone:           Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url:                https://blog.xx.com
+url:                https://dinphy.github.io
 root:               /
 permalink:          :year/:month/:day/:title/
 permalink_defaults:
 
-# Directory
+# Directory | 目录
 source_dir:         source
 public_dir:         public
 tag_dir:            tags
@@ -28,7 +29,7 @@ code_dir:           downloads/code
 i18n_dir:           :lang
 skip_render:
 
-# Writing
+# Writing | 写作
 new_post_name:      :title.md # File name of new posts
 default_layout:     post
 auto_spacing:       true
@@ -46,7 +47,7 @@ highlight:
   auto_detect:      false
   tab_replace:
 
-# Home page setting
+# Home page setting | 主页设置
 # path:             Root path for your blogs index page. (default = '')
 # per_page:         Posts displayed per page. (0 = disable pagination)
 # order_by:         Posts order. (Order by date descending by default)
@@ -55,20 +56,20 @@ index_generator:
   per_page:         10
   order_by:         -date
 
-# Category & Tag
+# Category & Tag | 分类 & 标签
 default_category:   uncategorized
 category_map:
 tag_map:
 
-# Date / Time format
+# Date / Time format | 日期 / 时间格式
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
 date_format:        YYYY-MM-DD
 time_format:        HH:mm:ss
 
-# Pagination
-## Set per_page to 0 to disable pagination
+# Pagination | 分页
+## Set per_page to 0 to disable pagination | 将per_page设置为0以禁用分页
 per_page:           10
 pagination_dir:     page
 archive_generator:
@@ -78,13 +79,40 @@ tag_generator:
 category_generator:
   per_page:         0
 
-# Extensions
+# Extensions | 主题扩展
 ## Plugins:         https://hexo.io/plugins/
+## Themes:          https://hexo.io/themes/
 theme:              hexo-theme-teal
 
-# Deployment
+# Deployment | 部署
 ## Docs:            https://hexo.io/zh-cn/docs/deployment.html
 deploy:
-  type:             heroku
-  repo:             https://git.heroku.com/hexo-theme-teal.git
+  type:             git
+  repository:       git@github.com:dinphy/dinphy.github.io.git
   branch:           master
+# feed | 用于生成RSS
+## npm install --save hexo-generator-feed
+feed:
+  type:             atom
+  path:             atom.xml
+  limit:            0
+# jsonContent | 用于生成静态站点数据，用作站内搜索的数据源
+## npm install --save hexo-generator-json-content
+jsonContent:
+  meta:             false
+  pages:            false
+  posts:
+    title:          true
+    date:           true
+    path:           true
+    text:           true
+    raw:            false
+    content:        false
+    slug:           false
+    updated:        false
+    comments:       false
+    link:           false
+    permalink:      false
+    excerpt:        false
+    categories:     false
+    tags:           true
