--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ valine:
   notify: false # Mail notify
   verify: false # Verify code
   avatar: mm # Gravatar style : mm/identicon/monsterid/wavatar/retro/hide
-  placeholder: 您打算说点什么？ # Comment Box placeholder
+  placeholder: Hi,留下您的足迹吧~ # Comment Box placeholder
   guest_info: nick,mail,link # Comment header info
   pageSize: 10 # comment list page size
 
